# fw-fs-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/engine/: __init__.py  extractor.py  orchestrator.py  scanner.py
src/gui/: __init__.py  file_picker.py  main_window.py  progress_panel.py  results_view.py
src/utils/: binwalk_wrapper.py
