[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firmware-fs-extractor"
version = "0.1.0"
description = "Extract embedded Linux filesystems from firmware binaries"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "pybinwalk>=0.0.3",
]

[project.scripts]
fw-extractor = "src.main:main"
